# watch-gettext

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  watch-gettext.c
